# Parziale-16-12-24

./: .gitignore
Esercizio 4/: CMakeLists.txt  Car.cpp  Car.h  Motorcycle.cpp  Motorcycle.h  Rental.cpp  Rental.h  Van.cpp  Van.h  Vehicle.cpp  Vehicle.h  main.cpp
Esercizio 5/: CMakeLists.txt  Credentials.cpp  Credentials.h  Handler.cpp  Handler.h  main.cpp
Esercizio 6/: App.cpp  App.h  CMakeLists.txt  Device.cpp  Device.h  GPS.cpp  GPS.h  Laptop.cpp  Laptop.h  Notifier.cpp  Notifier.h  Observer.h  Position.cpp  Position.h  Smartphone.cpp  Smartphone.h  Tablet.cpp  Tablet.h  main.cpp
